# OC-Learning

./: .gitignore  README.md
AppTest/: AppDelegate.m  BoxViewController.m  MainView.h  MainView.m  MainViewController.m  SceneDelegate.h  SceneDelegate.m  Shader.metal  TriangleViewController.h  TriangleViewController.m  XXdView.h  main.m
AppTest.xcodeproj/: project.pbxproj
AppTest.xcodeproj/project.xcworkspace/xcuserdata/chenqiudu.xcuserdatad/: UserInterfaceState.xcuserstate
AppTest.xcodeproj/xcuserdata/chenqiudu.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
AppTest/AppCore/ViewController/: BoxViewController.m
AppTest/AppTest/: XXdMath.h  XXdView.m
AppTest/AppTest.xcodeproj/: project.pbxproj
AppTest/AppTest.xcodeproj/project.xcworkspace/xcuserdata/chenqiudu.xcuserdatad/: UserInterfaceState.xcuserstate
AppTest/Config/: Info.plist
XXdMath/: XXdMath.c  XXdMath.h
XXdMath/XXdMath.xcodeproj/: project.pbxproj
XXdMath/XXdMath.xcodeproj/project.xcworkspace/xcuserdata/chenqiudu.xcuserdatad/: UserInterfaceState.xcuserstate
XXdMath/XXdMath.xcodeproj/xcuserdata/chenqiudu.xcuserdatad/xcschemes/: xcschememanagement.plist
autorelease-learn/autorelease-learn/: main.m
autorelease-learn/autorelease-learn.xcodeproj/: project.pbxproj
ios-learn.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios-learn.xcodeproj/project.xcworkspace/xcuserdata/chenqiudu.xcuserdatad/: UserInterfaceState.xcuserstate
ios-learn/ios-learn.xcodeproj/: project.pbxproj
ios-learn/ios-learn.xcodeproj/project.xcworkspace/xcuserdata/chenqiudu.xcuserdatad/: UserInterfaceState.xcuserstate
ios-learn/ios-learn.xcodeproj/xcshareddata/xcschemes/: ios-metal.xcscheme
ios-learn/ios-metal/AppCore/Main/: AppDelegate.h
ios-learn/ios-metal/AppCore/View/: XXdView.mm
ios-learn/ios-metal/AppCore/ViewController/: BoxViewController.h  BoxViewController.mm  MainViewController.h
ios-metal/AppCore/ViewController/: BoxViewController.mm  TriangleViewController.mm
ios-render/ios-render.xcodeproj/: project.pbxproj
ios-render/ios-render.xcodeproj/xcshareddata/xcschemes/: ios-render.xcscheme
ios-render/ios-render/Config/: Info.plist
ios-render/ios-render/Core/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  main.m
ios-render/ios-render/View/: RenderView.h  RenderView.mm
ios-render/ios-render/ViewController/: MainViewController.h  MainViewController.m
ios-render/metal-shader/: BoxShader.metal
ios-render/metal-support/: MetalCamera.cpp  MetalCamera.h  MetalCamera.hpp  MetalContext.cpp  MetalContext.h  MetalContext.hpp  MetalGeometry.cpp  MetalGeometry.h  MetalGeometry.hpp  MetalRender.cpp  MetalRender.h  MetalRender.hpp  MetalSupport.cpp  Singleton.hpp
mac-render/: CMakeLists.txt
mac-render/xxd-core/xxd-log/: Logger.hpp
mac-render/xxd-core/xxd-math/: XMath.cpp  XMath.hpp
mac-render/xxd-core/xxd-render/: Pipeline.cpp  Pipeline.hpp  RenderContext.cpp  RenderContext.hpp  RenderLayer.cpp  RenderLayer.hpp  RenderUtil.hpp  Shader.cpp  Shader.hpp
mac-render/xxd-core/xxd-template/: Delegate.hpp  Singleton.hpp
mac-render/xxd-shader/: Render2D.metal  Render2D.metal.air  Render3D.metal  Render3D.metal.air  XXdShader.metallib
mac-render/xxd-test/: AppDelegate.mm  TestView.h  TestView.mm  main.mm
xxd-math/: XXdMath.cpp  XXdMath.h
(+4 files in other folders)
